xmonad-xfce/.xmonad/xmonad.errors

xmonad.hs:11:5: error: parse error on input ‘,’
   |
11 |     , ((modMask, xK_b), sendMessage ToggleStruts)
   |     ^
